[gd_scene load_steps=2 format=3 uid="uid://chd6hcfb5m7lf"]

[ext_resource type="Script" uid="uid://dufl1dsmrli75" path="res://scripts/level_ui.gd" id="1_exbfu"]

[node name="LevelUI" type="CanvasLayer"]
script = ExtResource("1_exbfu")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DimensionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FruitsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="completion" type="Label" parent="MarginContainer"]
layout_mode = 2
